--- a/com.framework/test-output/index.html
+++ b/com.framework/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\C5274787\git\Framework_new\com.framework\XML files\testng.xml</span>
+                    <span>C:\Users\ksathish\git\Framework_new\com.framework\XML files\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,7 +135,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\C5274787\git\Framework_new\com.framework\XML files\testng.xml</span>
+            <span class="header-content">C:\Users\ksathish\git\Framework_new\com.framework\XML files\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -190,12 +190,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test')
 data.setCell(0, 2, 'com.framework.testcases.Testcasewithframework')
-data.setCell(0, 3, 14001);
+data.setCell(0, 3, 23779);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -228,19 +228,19 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Chrome, https://www.facebook.com/)</span>
-                <span class="method-start">1757 ms</span>
+                <span class="method-start">607 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">test</span>
-                <span class="method-start">10966 ms</span>
+                <span class="method-start">15564 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardownMessage([TestResult name=test status=SUCCESS method=Testcasewithframework.test()[pri:0, instance:com.framewo...)</span>
-                <span class="method-start">24971 ms</span>
+                <span class="method-start">39345 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">26705 ms</span>
+                <span class="method-start">40204 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
