--- a/com.framework/test-output/old/Suite/methods-alphabetical.html
+++ b/com.framework/test-output/old/Suite/methods-alphabetical.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>19/08/14 10:27:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String, java.lang.String)[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&gt;&gt;setup</td> 
+<tr bgcolor="687592">  <td>19/08/14 18:16:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String, java.lang.String)[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/08/14 10:27:27</td>   <td>-598</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&gt;&gt;setupsuite</td> 
+<tr bgcolor="687592">  <td>19/08/14 18:16:31</td>   <td>-681</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&gt;&gt;setupsuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>19/08/14 10:27:30</td>   <td>2162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">test</td> 
+<tr bgcolor="687592">  <td>19/08/14 18:17:48</td>   <td>76228</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
+<tr bgcolor="687592">  <td>19/08/14 18:17:47</td>   <td>75195</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMessage(org.testng.ITestResult)[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&lt;&lt;teardownMessage</td> 
+<td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/08/14 18:16:50</td>   <td>17443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">test</td> 
   <td>main@1847509784</td>   <td></td> </tr>
 </table>
