--- a/com.framework/test-output/old/Suite/methods.html
+++ b/com.framework/test-output/old/Suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="687592">  <td>19/08/19 12:39:55</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&gt;&gt;setupsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/08/19 12:39:56</td>   <td>617</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String, java.lang.String)[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="ceabc1">  <td>19/08/19 12:40:12</td>   <td>17056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">test</td> 
-  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/08/19 12:41:03</td>   <td>67741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMessage(org.testng.ITestResult)[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&lt;&lt;teardownMessage</td> 
-<td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
-<tr bgcolor="687592">  <td>19/08/19 12:41:03</td>   <td>68411</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@4dfa3a9d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1847509784</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/03/03 17:09:38</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@3c0ecd4b]">&gt;&gt;setupsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/03/03 17:09:40</td>   <td>1241</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String, java.lang.String)[pri:0, instance:com.framework.testcases.Testcasewithframework@3c0ecd4b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>20/03/03 17:10:07</td>   <td>28962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@3c0ecd4b]">test</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/03/03 17:10:56</td>   <td>77878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMessage(org.testng.ITestResult)[pri:0, instance:com.framework.testcases.Testcasewithframework@3c0ecd4b]">&lt;&lt;teardownMessage</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="939fd1">  <td>20/03/03 17:10:57</td>   <td>78649</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@3c0ecd4b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
 </table>
